# rust_db_index

./: Cargo.toml  README.md  main
src/: db.rs  index.rs
